jquery - ajax - $.ajax

--- a/jquery/ajax/index.html
+++ b/jquery/ajax/index.html
@@ -99,7 +99,15 @@
     
         $(document).ready(function(){
 
-
+            $.ajax({
+                url: "http://localhost:3000/books",
+                success: function(response) {
+                    console.log(response)
+                },
+                error: function(err) {
+                    console.log(err)
+                }
+            })
 
         });
         
