jquery - ajax - $.post

--- a/jquery/ajax/index.html
+++ b/jquery/ajax/index.html
@@ -121,6 +121,26 @@
                 error: function(err) {
                     console.log(err)
                 }
+            });
+
+            $('#form_create_book').on('submit', function(event) {
+                
+                event.preventDefault();
+
+                let data = {};
+
+                $.each($(this).serializeArray(), function(index, item) {
+
+                    data[item.name] = item.value;
+
+                });
+
+                $.post('http://localhost:3000/books', data, function(response) {
+
+                    console.log(response);
+
+                })
+
             })
 
         });
