--- a/jquery/hcode-loader/index.html
+++ b/jquery/hcode-loader/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-  <div id="loader" style="width: 100%; height: 100%; position: fixed; top: 0; left: 0; text-align: center; background-color: rgba(0, 0, 0, 0.4);">
-    <div class="lds-roller" style="position: absolute; top: 50%; left: 50%;"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-  </div>
   
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./hcode-loader.js"></script>
 </body>
 </html>
