bootstrap 5 - secao 2: introducao - usando o container - 100% fluid

--- a/bootstrap5-3projetos/secao01/aula05/index.html
+++ b/bootstrap5-3projetos/secao01/aula05/index.html
@@ -9,7 +9,7 @@
 <body>
   <!--
     .container (default) (breakpoints) (xs-1005 > px fixo)
-    .container (breakpoints: sm, md, lg)
+    .container (breakpoints: sm, md, lg, xl, xxl)
     .container-fluid (100% da largura)
   -->
   <div class="container">
