bootstrap 5 - secao 2: introducao - classes utilitarias - padding e margin

--- a/bootstrap5-3projetos/secao01/aula14/index.html
+++ b/bootstrap5-3projetos/secao01/aula14/index.html
@@ -23,6 +23,28 @@
 </head>
 <div class="container">
 <body>
+  <!--
+    p = margin
+    m = margin
+
+    p-0 = 0 rem.
+
+    1 = rem = 16px;
+    0 = 0rem
+    1 = 0.25rem
+    2 = 0.5rem
+    3 = 1rem
+    4 = 1.5rem
+    5 = 3rem
+
+    t = top
+    b = bottom
+    s = start (left)
+    e = end (right)
+
+    x = start-end
+    y = top-bottom
+  -->
   <div class="container">
     <div class="row">
       <div class="col-4 m-auto py-md-4 py-xl-0">
