bootstrap 5 - secao 2: introducao - classe de utilidades - gutter

--- a/bootstrap5-3projetos/secao01/aula15/index.html
+++ b/bootstrap5-3projetos/secao01/aula15/index.html
@@ -18,6 +18,18 @@
   </style>
 </head>
 <body>
+  <!--
+    Gutter
+
+    g - gutter
+
+    0-5 = rem.
+
+    x = horizontal
+    y = vertical
+
+    breakpoints
+  -->
   <div class="container">
     <div class="row row-cols-2 g-2">
       <div class="col">
