--- a/bootstrap5-3projetos/secao03/aula05/index.html
+++ b/bootstrap5-3projetos/secao03/aula05/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap 5 - secao 03 - aula 04</title>
+  <title>Bootstrap 5 - secao 03 - aula 05</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col">
-
+        <!-- 
+          também tem suporte aos breakpoints
+          text-xl-center
+        -->
         <p class="text-start">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates illo aut libero culpa amet fugit repellendus vero facere, magni voluptatem! Mollitia nulla non eveniet saepe vitae eos fugit facere enim
         </p>
         <p class="text-center">
