bootstrap 5 - secao 4: cores e icones - background color

--- a/bootstrap5-3projetos/secao04/aula02/index.html
+++ b/bootstrap5-3projetos/secao04/aula02/index.html
@@ -21,6 +21,18 @@
         <div class="p-3 bg-dark">background</div>
         <div class="p-3 bg-body">background</div>
         <div class="p-3 bg-white">background</div>
+
+        <h1>background - gradient</h1>
+        <div class="p-3 bg-primary bg-gradient">background</div>
+        <div class="p-3 bg-secondary bg-gradient">background</div>
+        <div class="p-3 bg-success bg-gradient">background</div>
+        <div class="p-3 bg-danger bg-gradient">background</div>
+        <div class="p-3 bg-warning bg-gradient">background</div>
+        <div class="p-3 bg-info bg-gradient">background</div>
+        <div class="p-3 bg-light bg-gradient">background</div>
+        <div class="p-3 bg-dark bg-gradient">background</div>
+        <div class="p-3 bg-body bg-gradient">background</div>
+        <div class="p-3 bg-white bg-gradient">background</div>
       </div>
     </div>
   </div>
