bootstrap 5 - secao 4: cores e icones - border color

--- a/bootstrap5-3projetos/secao04/aula03/index.html
+++ b/bootstrap5-3projetos/secao04/aula03/index.html
@@ -31,6 +31,31 @@
         <div class="box bg-light border border-start-0"></div>
         <div class="box bg-light border border-end-0"></div>
 
+        <h1>cores</h1>
+        <div class="box bg-light border border"></div>
+        <div class="box bg-light border border-primary"></div>
+        <div class="box bg-light border border-secondary"></div>
+        <div class="box bg-light border border-success"></div>
+        <div class="box bg-light border border-danger"></div>
+        <div class="box bg-light border border-warning"></div>
+        <div class="box bg-light border border-info"></div>
+        <div class="box bg-light border border-light"></div>
+        <div class="box bg-light border border-dark"></div>
+        <div class="box bg-light border border-white"></div>
+
+        <h1>tamanho</h1>
+        <div class="box bg-light border border-1"></div>
+        <div class="box bg-light border border-2"></div>
+        <div class="box bg-light border border-3"></div>
+        <div class="box bg-light border border-4"></div>
+        <div class="box bg-light border border-5"></div>
+
+        <h1>arredondamento</h1>
+        <div class="box bg-light border border-1 rounded-0"></div>
+        <div class="box bg-light border border-1 rounded-1"></div>
+        <div class="box bg-light border border-1 rounded-2"></div>
+        <div class="box bg-light border border-1 rounded-3"></div>
+
       </div>
     </div>
   </div>
