bootstrap 5 - secao 4: cores e icones - cores botoes

--- a/bootstrap5-3projetos/secao04/aula04/index.html
+++ b/bootstrap5-3projetos/secao04/aula04/index.html
@@ -27,6 +27,27 @@
         <button class="btn btn-dark">ok</button>
         <button class="btn btn-link">ok</button>
 
+        <h1>cores</h1>
+        <button class="btn btn-outline-primary">ok</button>
+        <button class="btn btn-outline-secondary">ok</button>
+        <button class="btn btn-outline-success">ok</button>
+        <button class="btn btn-outline-danger">ok</button>
+        <button class="btn btn-outline-warning">ok</button>
+        <button class="btn btn-outline-info">ok</button>
+        <button class="btn btn-outline-light">ok</button>
+        <button class="btn btn-outline-dark">ok</button>
+        <button class="btn btn-outline-link">ok</button>
+
+        <h1>tamanho</h1>
+        <button class="btn btn-primary btn-lg">ok</button>
+        <button class="btn btn-primary ">ok</button>
+        <button class="btn btn-primary btn-sm">ok</button>
+
+        <h1>desativado</h1>
+        <button class="btn btn-primary" disabled>ok</button>
+        <button class="btn btn-secondary" disabled>ok</button>
+        <button class="btn btn-success" disabled>ok</button>
+
       </div>
     </div>
   </div>  
