--- a/spacedu/projeto01-tela-de-login/index.html
+++ b/spacedu/projeto01-tela-de-login/index.html
@@ -31,20 +31,23 @@
         <div class="row full-height justify-content-center align-items-center" >
           <div class="col-8 align-self-center">
             <h2 class="display-5">Login</h2>
-            <p class="lead" style="margin-bottom: 40px;">faça o login para continuar</p>
+            <p class="lead mb-4" >faça o login para continuar</p>
             <input class="input border-0 border-bottom p-2" placeholder="email" type="text" />
             <br />
             <input class="input border-0 border-bottom p-2" placeholder="senha" type="password" />
             <br />
-            <button>logar</button>
-            <a href="#" >esqueceu a senha</a>
-
-            <hr />
-            <button>facebook</button>
-            <button>google</button>
-            <button>twinter</button>
-            <button>linkedin</button>
-            <button>pinterest</button>
+            <div class="mt-4 d-flex justify-content-between align-items-center">
+              <button class="btn btn-danger">logar</button>
+              <a href="#" class="text-secondary text-decoration-none">esqueceu a senha</a>  
+            </div>
+            
+            <hr class="m-5" />
+            <div class="d-flex justify-content-center">
+              <button class="btn btn-primary">facebook</button>
+              <button class="btn btn-danger">google</button>
+              <button class="btn btn-info">twinter</button>
+              <button class="btn btn-primary">linkedin</button>
+            </div>
           </div>
         </div>
       </div>
