--- a/spacedu/projeto01-tela-de-login/index.html
+++ b/spacedu/projeto01-tela-de-login/index.html
@@ -22,6 +22,13 @@
       outline: none;
 
     }
+    .icons>.btn {
+      color: white;
+      width: 45px;
+      height: 45px;
+      padding: 0px;
+      line-height: 0.9rem;
+    }
   </style>
 </head>
 <body>
@@ -29,7 +36,7 @@
     <div class="row full-height">
       <div class="col-md-6 col-12">
         <div class="row full-height justify-content-center align-items-center" >
-          <div class="col-8 align-self-center">
+          <div class="col-8 col-xxl-4 align-self-center">
             <h2 class="display-5">Login</h2>
             <p class="lead mb-4" >faça o login para continuar</p>
             <input class="input border-0 border-bottom p-2" placeholder="email" type="text" />
@@ -42,16 +49,24 @@
             </div>
             
             <hr class="m-5" />
-            <div class="d-flex justify-content-center">
-              <button class="btn btn-primary">facebook</button>
-              <button class="btn btn-danger">google</button>
-              <button class="btn btn-info">twinter</button>
-              <button class="btn btn-primary">linkedin</button>
+            <div class="d-flex icons justify-content-around">
+              <button class="btn btn-primary rounded-circle">
+                <i class="bi bi-facebook"></i>
+              </button>
+              <button class="btn btn-danger rounded-circle">
+                <i class="bi bi-google"></i>
+              </button>
+              <button class="btn btn-info rounded-circle">
+                <i class="bi bi-twitter"></i>
+              </button>
+              <button class="btn btn-primary rounded-circle">
+                <i class="bi bi-linkedin"></i>
+              </button>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-12 full-height img-cover" >
+      <div class="col-md-6 col-12 full-height img-cover d-none d-md-block" >
 
       </div>
     </div>
