--- a/spacedu/secao06/aula05/index.html
+++ b/spacedu/secao06/aula05/index.html
@@ -8,11 +8,30 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a href="#" class="navbar-brand">
         IMG|Logo
       </a>
+      <button>
+        -
+      </button>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#">lifestyle</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">entretenimento</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">esportes</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">blogs</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
