--- a/spacedu/secao06/aula05/index.html
+++ b/spacedu/secao06/aula05/index.html
@@ -13,10 +13,10 @@
       <a href="#" class="navbar-brand">
         IMG|Logo
       </a>
-      <button>
-        -
+      <button data-bs-toggler="collapse" data-bs-target="#itens">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse" id="itens">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a href="#">lifestyle</a>
