--- a/spacedu/secao06/aula05/index.html
+++ b/spacedu/secao06/aula05/index.html
@@ -13,7 +13,7 @@
       <a href="#" class="navbar-brand">
         IMG|Logo
       </a>
-      <button data-bs-toggler="collapse" data-bs-target="#itens">
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#itens">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="itens">
