--- a/spacedu/secao06/aula05/index.html
+++ b/spacedu/secao06/aula05/index.html
@@ -19,16 +19,23 @@
       <div class="collapse navbar-collapse" id="itens">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="#">lifestyle</a>
+            <a class="nav-link" href="#">lifestyle</a>
           </li>
           <li class="nav-item">
-            <a href="#">entretenimento</a>
+            <a class="nav-link" href="#">entretenimento</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">esportes</a>
+            
+            <ul class="dropdown-menu">
+              <li><a href="#" class="dropdown-item">futebol</a></li>
+              <li><a href="#" class="dropdown-item">automobilismo</a></li>
+              <li><a href="#" class="dropdown-item">e-sports</a></li>
+              <li><a href="#" class="dropdown-item">hipismo</a></li>
+            </ul>
           </li>
           <li class="nav-item">
-            <a href="#">esportes</a>
-          </li>
-          <li class="nav-item">
-            <a href="#">blogs</a>
+            <a class="nav-link" href="#">blogs</a>
           </li>
         </ul>
       </div>
