--- a/spacedu/secao06/aula05/index.html
+++ b/spacedu/secao06/aula05/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
       <a href="#" class="navbar-brand">
         IMG|Logo
@@ -17,7 +17,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="itens">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" href="#">lifestyle</a>
           </li>
@@ -38,6 +38,10 @@
             <a class="nav-link" href="#">blogs</a>
           </li>
         </ul>
+        <form class="d-flex ms-auto">
+          <input class="form-control" placeholder="digite uma palavra" type="search"  /> 
+          <button class="btn btn-success" type="submit">pesquisar</button>
+        </form>
       </div>
     </div>
   </nav>
