--- a/spacedu/secao06/aula05/index.html
+++ b/spacedu/secao06/aula05/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light">
     <div class="container">
       <a href="#" class="navbar-brand">
         IMG|Logo
@@ -45,6 +45,23 @@
       </div>
     </div>
   </nav>
+
+  <div style="height: 2400px; padding-top: 60px;">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, impedit ipsam, quia, ullam sit quam fuga provident fugit veniam vel nemo. Non iste delectus id maxime accusamus dolores ratione repudiandae?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro error consectetur beatae nam esse, architecto consequuntur perferendis reprehenderit ex quod itaque nostrum in at, necessitatibus a recusandae perspiciatis ducimus facilis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quibusdam tenetur doloremque unde adipisci in vitae eaque illo nam ratione perferendis aliquid veritatis, reiciendis officia, odit iusto eveniet sit. Commodi!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quia cupiditate molestiae accusantium animi numquam iste non iusto enim quam recusandae cumque laboriosam consequatur facilis exercitationem, eos, unde eaque. Veritatis!
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse non pariatur impedit, quae soluta fuga, quo dolore repudiandae rerum, aperiam omnis. Quas commodi, nihil assumenda iste quam eveniet! Modi, nemo?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quod, ipsa fuga beatae labore amet recusandae doloremque hic perferendis dignissimos vero officiis. Voluptas tenetur rerum ipsum, et amet blanditiis excepturi!
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio accusamus, earum, ab expedita aut quas suscipit consequuntur nihil quam iusto accusantium quo, neque molestias unde vero. Quae officiis facere cupiditate?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat eum amet totam possimus quos sed, molestias praesentium quasi perspiciatis ducimus minima modi ut optio necessitatibus laborum enim reiciendis fuga quo.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit blanditiis minima accusantium, molestias temporibus necessitatibus quaerat eligendi distinctio ullam commodi laborum ducimus molestiae libero dolor recusandae, velit quasi assumenda nam.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, praesentium dignissimos laudantium velit, autem assumenda sint deserunt ab animi vero consequatur ea molestiae odit harum ipsum modi. Neque, suscipit quis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, dolores eos animi natus incidunt tempora quasi necessitatibus ratione aperiam soluta fugit deserunt sint expedita aspernatur molestiae odio voluptate. Suscipit, alias.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque deserunt iure perspiciatis dignissimos iusto temporibus optio esse corrupti dicta eius, maiores eum laboriosam vitae perferendis, quae voluptatum facere quasi sequi.
+    <div style="height: 1000px; background-color: brown;">
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
