bootstrap 5 - secao 7: cards - cards - visao geral

--- a/spacedu/secao07/aula01/index.html
+++ b/spacedu/secao07/aula01/index.html
@@ -31,9 +31,9 @@
             <p class="card-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum iusto neque eius atque aut ipsum! Alias incidunt vel nulla, quisquam aliquid, aliquam modi quo nisi eligendi repellat, placeat voluptate nam?
             </p>
-            <a href="#">link 1</a>
-            <a href="#">link 2</a>
-            <a href="#">link 3</a>
+            <a href="#" class="card-link">link 1</a>
+            <a href="#" class="card-link">link 2</a>
+            <a href="#" class="card-link">link 3</a>
           </div>
         </div>
       </div>
