bootstrap 5 - secao 8: projeto 02 site de educacao - cabeçalho amarelo responsivo

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -11,18 +11,18 @@
   <div class="bg-warning">
     <div class="container p-2 d-flex">
       <div class="d-none d-xl-block">
-        <img src="img/pin.svg" />
+        <img alt="icon pin" src="img/pin.svg" />
         rua heitor penteado, 1200 - sao paulo
       </div>
       <div class="ms-5 d-none d-md-block">
-        <img src="img/letter.svg" />
+        <img alt="incon letter" src="img/letter.svg" />
         contato@educacao.com.br
       </div>
       <div class="ms-md-auto me-md-0 mx-auto">
-        <img src="img/facebook.svg" />
-        <img src="img/pinterest.svg" />
-        <img src="img/twitter.svg" />
-        <img src="img/instagram.svg" />
+        <img alt="fecabook" src="img/facebook.svg" />
+        <img alt="pinterest" src="img/pinterest.svg" />
+        <img alt="twitter" src="img/twitter.svg" />
+        <img alt="instagram" src="img/instagram.svg" />
       </div>
     </div>
     
