bootstrap 5 - secao 8: projeto 02 site de educacao - cabeçalho amarelo responsivo

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -19,7 +19,7 @@
         contato@educacao.com.br
       </div>
       <div class="ms-md-auto me-md-0 mx-auto">
-        <img alt="fecabook" src="img/facebook.svg" />
+        <img alt="facebook" src="img/facebook.svg" />
         <img alt="pinterest" src="img/pinterest.svg" />
         <img alt="twitter" src="img/twitter.svg" />
         <img alt="instagram" src="img/instagram.svg" />
