--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap 5 - secao 08 - aula 04</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css">
-</head>
-<body>
-  <div class="bg-warning">
-    <div class="container p-2 d-flex">
-      <div class="d-none d-xl-block">
-        <img alt="icon pin" src="img/pin.svg" />
-        rua heitor penteado, 1200 - sao paulo
-      </div>
-      <div class="ms-5 d-none d-md-block">
-        <img alt="incon letter" src="img/letter.svg" />
-        contato@educacao.com.br
-      </div>
-      <div class="ms-md-auto me-md-0 mx-auto">
-        <img alt="facebook" src="img/facebook.svg" />
-        <img alt="pinterest" src="img/pinterest.svg" />
-        <img alt="twitter" src="img/twitter.svg" />
-        <img alt="instagram" src="img/instagram.svg" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootstrap 5 - secao 08 - aula 04</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
+    <div class="bg-warning">
+      <div class="container p-2 d-flex">
+        <div class="d-none d-xl-block">
+          <img alt="icon pin" src="img/pin.svg" />
+          rua heitor penteado, 1200 - sao paulo
+        </div>
+        <div class="ms-5 d-none d-md-block">
+          <img alt="incon letter" src="img/letter.svg" />
+          contato@educacao.com.br
+        </div>
+        <div class="ms-md-auto me-md-0 mx-auto">
+          <img alt="facebook" src="img/facebook.svg" />
+          <img alt="pinterest" src="img/pinterest.svg" />
+          <img alt="twitter" src="img/twitter.svg" />
+          <img alt="instagram" src="img/instagram.svg" />
+        </div>
       </div>
     </div>
-    
-  </div>      
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
