bootstrap 5 - secao 8: projeto 02 site de educacao - menu parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -24,7 +24,7 @@
           <img alt="icon pin" src="img/pin.svg" />
           rua heitor penteado, 1200 - sao paulo
         </div>
-        <div class="ms-5 d-none d-md-block">
+        <div class="ms-md-5 d-none d-md-block">
           <img alt="incon letter" src="img/letter.svg" />
           contato@educacao.com.br
         </div>
@@ -40,9 +40,9 @@
     <!-- end cabeçalho amarelo -->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <div class="container-fluid">
+      <div class="container p-2">
         <a class="navbar-brand" href="#">
-          <img src="img/logo.svg" style="height: 40px" class="me-2" />
+          <img src="img/logo.svg" style="height: 38px" class="me-2" />
           EducaçãoONE
         </a>
         <button
@@ -71,7 +71,12 @@
               <a class="nav-link" href="#">Contato</a>
             </li>
           </ul>
-          <div class="d-flex"></div>
+          <div class="d-flex">
+            <button class="btn btn-primary">cadastre-se</button>
+            <button class="btn btn-info border">
+              <img src="img/search.svg" />
+            </button>
+          </div>
         </div>
       </div>
     </nav>
