bootstrap 5 - secao 8: projeto 02 site de educacao - menu parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -25,7 +25,7 @@
           rua heitor penteado, 1200 - sao paulo
         </div>
         <div class="ms-md-5 d-none d-md-block">
-          <img alt="incon letter" src="img/letter.svg" />
+          <img alt="icon letter" src="img/letter.svg" />
           contato@educacao.com.br
         </div>
         <div class="ms-md-auto me-md-0 mx-auto">
