--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -14,36 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css"
     />
-    <style type="text/css">
-      .bg-primary {
-        background-color: #fdc800 !important;
-      }
-
-      .btn-primary {
-        background-color: #fdc800;
-        border: 1px solid #fdc800;
-        color: #002147;
-      }
-
-      .bg-light {
-        background-color: #f0f4f9 !important;
-      }
-
-      .btn-primary:hover {
-        background-color: #fdc800;
-        border: 1px solid #002147;
-        color: #002147;
-      }
-
-      .btn-info {
-        background-color: white;
-      }
-
-      .btn-info:hover {
-        border: 1px solid #002147;
-        background-color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- start cabeçalho amarelo -->
