--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -43,7 +43,12 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div class="container p-2">
         <a class="navbar-brand" href="#">
-          <img src="img/logo.svg" style="height: 38px" class="me-2" />
+          <img
+            src="img/logo.svg"
+            alt="logo educacao"
+            style="height: 38px"
+            class="me-2"
+          />
           EducaçãoONE
         </a>
         <button
@@ -74,13 +79,39 @@
           </ul>
           <div class="d-flex">
             <button class="btn btn-primary me-3">cadastre-se</button>
-            <button class="btn btn-info border">
+            <button class="btn btn-info">
               <img src="img/search.svg" />
             </button>
           </div>
         </div>
       </div>
     </nav>
+
+    <section class="bg-light">
+      <div class="container">
+        <div class="row pt-4">
+          <div class="col-lg-7 align-self-center">
+            <h5>Tornese um mestre</h5>
+            <h1>
+              Aprenda novas habilidades
+              <br />
+              Encontre os melhores cursos
+            </h1>
+            <div class="mt-5 mb-5">
+              <button class="btn btn-primary px-4 py-2">Contrate agora</button>
+              <button class="btn btn-info px-4 py-2">Saiba mais</button>
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <img
+              src="img/banner.svg"
+              class="img-fluid my-5"
+              alt="banner principar"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
