bootstrap 5 - secao 8: projeto 02 site de educacao - secao principal banner

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -91,7 +91,7 @@
       <div class="container">
         <div class="row pt-4">
           <div class="col-lg-7 align-self-center">
-            <h5>Tornese um mestre</h5>
+            <h5>Torne-se um mestre</h5>
             <h1>
               Aprenda novas habilidades
               <br />
