--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -80,7 +80,7 @@
           <div class="d-flex">
             <button class="btn btn-primary me-3">cadastre-se</button>
             <button class="btn btn-info">
-              <img src="img/search.svg" />
+              <img alt="campo de busca" src="img/search.svg" />
             </button>
           </div>
         </div>
