--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -113,6 +113,22 @@
       </div>
     </section>
 
+    <section class="bg-half-light">
+      <div class="container bg-secondary rounded rounded-3 p-4">
+        <div class="row text-white align-items-center">
+          <div class="col-2 d-none d-sm-block">
+            <img src="img/success.svg" class="img-fluid" alt="alvo" />
+          </div>
+          <div class="col-5">
+            <h5>Proximo curso Python basico</h5>
+          </div>
+          <div class="col-5">
+            <p class="h1">11:02:45:21</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
