bootstrap 5 - secao 8: projeto 02 site de educacao - secao proximo curso parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -120,7 +120,7 @@
             <img src="img/success.svg" class="img-fluid" alt="alvo" />
           </div>
           <div class="col-5">
-            <h5>Proximo curso Python basico</h5>
+            <h5>Próximo curso Python básico!</h5>
           </div>
           <div class="col-5">
             <p class="h1">11:02:45:21</p>
