bootstrap 5 - secao 8: projeto 02 site de educacao - secao proximo curso parte 2

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -120,10 +120,33 @@
             <img src="img/success.svg" class="img-fluid" alt="alvo" />
           </div>
           <div class="col-5">
-            <h5>Próximo curso Python básico!</h5>
+            <h5>
+              Próximo curso <span class="text-primary"> Python básico</span>!
+            </h5>
           </div>
           <div class="col-5">
-            <p class="h1">11:02:45:21</p>
+            <div class="row g-0 align-items-center text-center">
+              <div class="col">
+                <div class="text-large">11</div>
+                <div class="text-small">Dias</div>
+              </div>
+              <div class="col-1 fs-4 mb-3">:</div>
+              <div class="col">
+                <div class="text-large">02</div>
+                <div class="text-small">Horas</div>
+              </div>
+              <div class="col-1 fs-4 mb-3">:</div>
+              <div class="col">
+                <div class="text-large">45</div>
+                <div class="text-small">Minutos</div>
+              </div>
+              <div class="col-1 fs-4 mb-3">:</div>
+              <div class="col">
+                <div class="text-large">21</div>
+                <div class="text-small">Segundos</div>
+              </div>
+            </div>
+            <!-- <p class="h1">11:02:45:21</p> -->
           </div>
         </div>
       </div>
