bootstrap 5 - secao 8: projeto 02 site de educacao - secao proximo curso parte 2

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -115,16 +115,16 @@
 
     <section class="bg-half-light">
       <div class="container bg-secondary rounded rounded-3 p-4">
-        <div class="row text-white align-items-center">
+        <div class="row g-0 g-md-2 text-white align-items-center">
           <div class="col-2 d-none d-sm-block">
             <img src="img/success.svg" class="img-fluid" alt="alvo" />
           </div>
-          <div class="col-5">
+          <div class="col-6">
             <h5>
               Próximo curso <span class="text-primary">Python básico</span>!
             </h5>
           </div>
-          <div class="col-5">
+          <div class="col-6 col-md-5">
             <div class="row g-0 align-items-center text-center">
               <div class="col">
                 <div class="text-large">11</div>
