bootstrap 5 - secao 8: projeto 02 site de educacao - (correcao) secao proximo curso parte 2

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -119,7 +119,7 @@
           <div class="col-2 d-none d-sm-block">
             <img src="img/success.svg" class="img-fluid" alt="alvo" />
           </div>
-          <div class="col-6">
+          <div class="col-6 col-md-5">
             <h5>
               Próximo curso <span class="text-primary">Python básico</span>!
             </h5>
