--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -152,6 +152,31 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center mt-5">
+            <h1>cursos em destaque</h1>
+          </div>
+        </div>
+        <div class="row row-cols-2 row-cols-md-3">
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso01.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">desing de experiencia do usuario</div>
+                <div class="card-text">ux/ui school</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
