bootstrap 5 - secao 8: projeto 02 site de educacao - secao cursos parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -155,11 +155,11 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center mt-5">
+          <div class="col-12 text-center mt-5 mb-3">
             <h1>cursos em destaque</h1>
           </div>
         </div>
-        <div class="row row-cols-2 row-cols-md-3">
+        <div class="row row-cols-2 row-cols-md-3 g-4">
           <div class="col">
             <div class="card">
               <img
@@ -170,6 +170,116 @@
               <div class="card-body">
                 <div class="card-title">desing de experiencia do usuario</div>
                 <div class="card-text">ux/ui school</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso02.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">adobe xd - prototipacao</div>
+                <div class="card-text">adobe</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso03.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">ux - ui</div>
+                <div class="card-text">puc university</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso04.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">
+                  ux aplicado na cunstrucao de aplicativos
+                </div>
+                <div class="card-text">comunications school</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso05.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">
+                  pense novamente como entender os argumentos que convecem
+                </div>
+                <div class="card-text">comunication school</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso06.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">
+                  desenvolvimento de aplicativos android
+                </div>
+                <div class="card-text">developer school</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso07.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">aprenda a estudar programacao</div>
+                <div class="card-text">developer school</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso08.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">logica de programacao</div>
+                <div class="card-text">developers school</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="img/curso09.svg"
+                class="card-img-top"
+                alt="curso - desing de experiencia do usuario"
+              />
+              <div class="card-body">
+                <div class="card-title">logomarcars iovadoras</div>
+                <div class="card-text">adobe</div>
               </div>
             </div>
           </div>
