bootstrap 5 - secao 8: projeto 02 site de educacao - secao cursos parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -156,7 +156,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5 mb-3">
-            <h1>cursos em destaque</h1>
+            <h1>Cursos em destaque</h1>
           </div>
         </div>
         <div class="row row-cols-2 row-cols-md-3 g-4">
