bootstrap 5 - secao 8: projeto 02 site de educacao - secao cursos parte 2

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -156,7 +156,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5 mb-3">
-            <h1>Cursos em destaque</h1>
+            <h1 class="text-secondary">Cursos em destaque</h1>
           </div>
         </div>
         <div class="row row-cols-2 row-cols-md-3 g-4">
@@ -168,8 +168,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">desing de experiencia do usuario</div>
-                <div class="card-text">ux/ui school</div>
+                <div class="card-title text-secondary fw-bold">
+                  desing de experiencia do usuario
+                </div>
+                <div class="card-text text-body">ux/ui school</div>
               </div>
             </div>
           </div>
@@ -181,8 +183,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">adobe xd - prototipacao</div>
-                <div class="card-text">adobe</div>
+                <div class="card-title text-secondary fw-bold">
+                  adobe xd - prototipacao
+                </div>
+                <div class="card-text text-body">adobe</div>
               </div>
             </div>
           </div>
@@ -194,8 +198,8 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">ux - ui</div>
-                <div class="card-text">puc university</div>
+                <div class="card-title text-secondary fw-bold">ux - ui</div>
+                <div class="card-text text-body">puc university</div>
               </div>
             </div>
           </div>
@@ -207,10 +211,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">
+                <div class="card-title text-secondary fw-bold">
                   ux aplicado na cunstrucao de aplicativos
                 </div>
-                <div class="card-text">comunications school</div>
+                <div class="card-text text-body">comunications school</div>
               </div>
             </div>
           </div>
@@ -222,10 +226,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">
+                <div class="card-title text-secondary fw-bold">
                   pense novamente como entender os argumentos que convecem
                 </div>
-                <div class="card-text">comunication school</div>
+                <div class="card-text text-body">comunication school</div>
               </div>
             </div>
           </div>
@@ -237,10 +241,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">
+                <div class="card-title text-secondary fw-bold">
                   desenvolvimento de aplicativos android
                 </div>
-                <div class="card-text">developer school</div>
+                <div class="card-text text-body">developer school</div>
               </div>
             </div>
           </div>
@@ -252,8 +256,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">aprenda a estudar programacao</div>
-                <div class="card-text">developer school</div>
+                <div class="card-title text-secondary fw-bold">
+                  aprenda a estudar programacao
+                </div>
+                <div class="card-text text-body">developer school</div>
               </div>
             </div>
           </div>
@@ -265,8 +271,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">logica de programacao</div>
-                <div class="card-text">developers school</div>
+                <div class="card-title text-secondary fw-bold">
+                  logica de programacao
+                </div>
+                <div class="card-text text-body">developers school</div>
               </div>
             </div>
           </div>
@@ -278,8 +286,10 @@
                 alt="curso - desing de experiencia do usuario"
               />
               <div class="card-body">
-                <div class="card-title">logomarcars iovadoras</div>
-                <div class="card-text">adobe</div>
+                <div class="card-title text-secondary fw-bold">
+                  logomarcars iovadoras
+                </div>
+                <div class="card-text text-body">adobe</div>
               </div>
             </div>
           </div>
