--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -287,7 +287,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  logomarcars iovadoras
+                  logomarcas inovadoras
                 </div>
                 <div class="card-text text-body">adobe</div>
               </div>
