bootstrap 5 - secao 8: projeto 02 site de educacao - correcoes texto

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -184,7 +184,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  adobe xd - prototipacao
+                  adobe xd - prototipação
                 </div>
                 <div class="card-text text-body">adobe</div>
               </div>
@@ -212,7 +212,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  ux aplicado na cunstrucao de aplicativos
+                  ux aplicado na construção de aplicativos
                 </div>
                 <div class="card-text text-body">comunications school</div>
               </div>
@@ -257,7 +257,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  aprenda a estudar programacao
+                  aprenda a estudar programação
                 </div>
                 <div class="card-text text-body">developer school</div>
               </div>
@@ -272,7 +272,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  logica de programacao
+                  logica de programação
                 </div>
                 <div class="card-text text-body">developers school</div>
               </div>
